OTOT_TASK_A3/kubernetes/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: taska3
spec:
  type: NodePort
  selector:
    app: client-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
      nodePort: 30000
